tests/tests/compile_fail/overload_mismatch.sml
fun inc x = x + 1
val x = inc 1.0
